--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-__pycache__/
+__pycache__/*
+.gitignore
+__pycache__/alignment_parser.cpython-312.pyc
+__pycache__/blastn_parser.cpython-312.pyc
+__pycache__/load_consensus.cpython-312.pyc
+__pycache__/lineage_parser.cpython-312.pyc
+__pycache__/derep_hitsets.cpython-312.pyc
+__pycache__/minimize_var.cpython-312.pyc
+__pycache__/Refseq.cpython-312.pyc
+__pycache__/utils.cpython-312.pyc
