handling of empty samples in combine_consensus

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 __pycache__/*
-.gitignore
 __pycache__/alignment_parser.cpython-312.pyc
 __pycache__/blastn_parser.cpython-312.pyc
 __pycache__/load_consensus.cpython-312.pyc
@@ -15,3 +14,4 @@ __pycache__/load_consensus.cpython-312.pyc
 __pycache__/minimize_var.cpython-312.pyc
 __pycache__/Refseq.cpython-312.pyc
 __pycache__/utils.cpython-312.pyc
+__pycache__/Refseq.cpython-312.pyc
