--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ __pycache__/load_consensus.cpython-312.pyc
 __pycache__/minimize_var.cpython-312.pyc
 __pycache__/Refseq.cpython-312.pyc
 __pycache__/utils.cpython-312.pyc
+config.txt
